@@ -1,3 +1,10 @@
+2010/08/01
+    Added extra actual parameter because the dlr_find prototype
+    in the Kannel sources has been changed.
+    The smpp username (system-id) is relayed to bearerbox as
+    billing information (msg->sms.binfo). This can be used in
+    order to bill the reflected user.
+
 2010/07/28
     Patch by Victor Luchitz to add tlv's to delivery reports.
     At the same time fixed format of submit data/done date in dlrs.
